Adding template link

--- a/website/index.html
+++ b/website/index.html
@@ -107,7 +107,7 @@
             <div class="panel-body">
               <h4 class="panel-title">Position paper requirements</h4>
               <p>
-              Full papers should be comprised of 4-6 ACM SIG style pages – regular HRI conference style. Video submission/live demonstrations should in total not be longer than 15 minutes and need to be accompanied by a 2 page ACM SIG style extended abstract. Video submissions need be in mp4 format and demonstrations have to be accompanied by an outline of the demonstration not longer than one page.
+              Full papers should be comprised of 4-6 pages ACM SIG style (<a href="http://www.acm.org/sigs/publications/proceedings-templates">template</a>). Video submission/live demonstrations should in total not be longer than 15 minutes and need to be accompanied by a 2 page ACM SIG style extended abstract. Video submissions need be in mp4 format and demonstrations have to be accompanied by an outline of the demonstration not longer than one page.
               </p>
 
               <h4 class="panel-title">Plans for documenting the workshop</h4>
