--- a/website/index.html
+++ b/website/index.html
@@ -26,6 +26,9 @@
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
+	      <a class="navbar-brand" href="#">
+	        <img alt="Brand" height="150%" src="lcas_logo_100px_white.png">
+	      </a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
