--- a/website/index.html
+++ b/website/index.html
@@ -41,7 +41,7 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#cfp">Call for Papers</a></li>
+            <!--<li><a href="#cfp">Call for Papers</a></li>-->
             <li><a href="#committee">Organisation Committee</a></li>
             <li><a href="#topics">Workshop Topics</a></li>
             <li><a href="#dates">Important Dates</a></li>
@@ -71,13 +71,6 @@
         <h1>Human-Robot Spatial Interaction</h1>
           <p>
             Robots per definition have a physical embodiment and most of the currently used commercial and research robots are able to navigate quite safely and reliably through their environment. With these mobile robots moving into day to day life in private homes, elder care, or in public spaces and outdoors as robotic guides, Human-Robot Spatial Interaction (HRSI) – the study of joint movement of humans and robots and the social signals governing the interaction – becomes more and more important. Especially with robots moving into elder care and education HRSI has to be adapted to the needs and preferences of elderly people and children with motoric or cognitive problems. Deviating from the usual participant group of healthy and mobile interaction partners and focusing on the specific needs in elder care and eduction of children with disabilities should therefore be considered in all aspects of HRSI and HHSI. Moreover, incorporating social norms, like proxemics, and social signals, like eye contact and motionings, into current navigation approaches – be it constraint-based or learned from observation/demonstration or interactively – how to evaluate the quality of the HRSI using novel feedback measures and devices, and grounding HRSI in empiric experiments focusing on Human-Human Spatial Interaction will be the main focus of this workshop. The overall aim is to bring together participants from different fields, looking at all aspects of HRSI by presenting their work and identifying the main problems and questions on the way to a holistic approach.
-          </p>
-      </div>
-      <div class="container" id="cfp">
-        <h1>Call for Papers</h1>
-          <p>
-            tba<br>
-            <a href="https://easychair.org/conferences/?conf=hrsiworkshop2015">Submisson link</a>
           </p>
       </div>
 
@@ -142,7 +135,7 @@
             <div class="panel-body">
               <h4 class="panel-title">Submission system</h4>
               <p>
-              Submissions are handle via easychair: <a href="https://easychair.org/conferences/?conf=hrsiworkshop2015">https://easychair.org/conferences/?conf=hrsiworkshop2015</a>
+              Submissions are handle via easychair: <a href="https://easychair.org/conferences/?conf=hrsiworkshop2015">Submisson link</a>
               </p>
               <h4 class="panel-title">Position paper requirements</h4>
               <p>
@@ -244,7 +237,7 @@
 
       
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
           <div class="panel" id="contact">
             <div class="panel-heading">
               <h3 class="panel-title">Contact</h3>
@@ -255,6 +248,15 @@
               <p>Lincoln, LN6 7TS</p>
               <p>United Kingdom</p>
               <p><a href="mailto:cdondrup@lincoln.ac.uk">cdondrup@lincoln.ac.uk</a></p>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="panel" id="logos">
+            <div class="panel-body">
+            	<img height="100px" src="lcas_logo_100px.png" />
+            	<img height="100px" src="uol.jpg" />
             </div>
 
           </div>
