fixed strands link

--- a/website/index.html
+++ b/website/index.html
@@ -78,7 +78,7 @@
 		        </div>
 		        <div class="col-md-3">		            
             		<p>a workshop at <br/><a href="http://humanrobotinteraction.org/2015/program-2/workshops/"><img alt="HRI logo" src="hri-logo_main.png" width="70%"/></a></p>
-		        	<p>Sponsored by <a href="http://strands-project.org"><img alt="STRANDS project" src="STRANDS_logo.png" width="100%"/></a></p>
+		        	<p>Sponsored by <a href="http://strands-project.eu"><img alt="STRANDS project" src="STRANDS_logo.png" width="100%"/></a></p>
 		        </div>
 	        </div>
 
