--- a/website/index.html
+++ b/website/index.html
@@ -122,7 +122,7 @@
 
               <h4 class="panel-title">Submission deadline</h4>
               <p>
-              18/01/2015 - 23:59PST
+              *New* 25/01/2015 - 23:59PST
               </p>
               
               <h4 class="panel-title">Notification of acceptance</h4>
