--- a/website/index.html
+++ b/website/index.html
@@ -86,7 +86,7 @@
         
         <h2>About</h2>
           <p>
-          	<center><b>Workshop cancelled!</b></center>
+          	<font size="22"><center><b>Workshop cancelled!</b></center></font>
           </p>
           
           <p>
