--- a/website/index.html
+++ b/website/index.html
@@ -143,7 +143,7 @@
               
               <h4 class="panel-title">Workshop</h4>
               <p>
-              02/03/2015 - 09:00PST
+              Cancelled.
               </p>
             </div>
           </div>
