--- a/website/index.html
+++ b/website/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="navbar-header">
 	      <a class="navbar-brand" href="#">
-	        <img alt="Brand" height="150%" src="hrsi-logo.png">
+	        WEBSITE
 	      </a>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
