Added content for first website release.

--- a/website/index.html
+++ b/website/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Christian Dondrup" >
 
-    <title>Title</title>
+    <title>Christian Dondrup</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,39 +28,35 @@
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
           </button>
-          <a class="navbar-brand" href="#">TITLE</a>
+          <a class="navbar-brand" href="http://staff.lincoln.ac.uk/cdondrup">Christian Dondrup</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <!--<li class="active"><a href="#">Home</a></li>-->
-            <!--<li><a href="#about">About</a></li>-->
-            <!--<li><a href="#cfp">Call for Papers</a></li>-->
-            <li><a href="#whatever">Whatever</a></li>
-            <!--<li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li>
-              </ul>
-            </li>-->
+            <li><a href="index.html">Home</a></li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="research.html">Research</a></li>
+				<li><a href="software.html">Software</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container theme-showcase" role="main">
-      
+      <h1>Welcome!</h1>
+		<br><br>
       <!-- Main jumbotron for a primary marketing message or call to action -->
       <div class="jumbotron" id="about">
             <div class="row">
 		        <div class="col-md-12">
-		        	<h1>Highlight</h1>
-		        	your text goes here
+		        	<h2>News</h2>
+					  <h3>15/03/15 - Software section added.</h3>					  
+					  <p>I added a section for released and currently developed software. This includes the people tracker, also showing a video of 
+					  of its functionality, and the QTC generation. Please refer to the Software section for more information.</p>
+					  <p><a class="btn btn-primary btn-lg" href="software.html" role="button">Go to Software</a></p>
+					  <br><br>
+					  <h3>15/03/15 - Website online.</h3>					  
+					  <p>The first version of my website is now online. Feel free to have a look around. Especially the Research and Software pages should be of interest.</p>
+					  <p><a class="btn btn-primary btn-lg" href="research.html" role="button">Go to Research</a> <a class="btn btn-primary btn-lg" href="software.html" role="button">Go to Software</a></p>
 		        </div>
 	        </div>
 
