--- a/website/software.html
+++ b/website/software.html
@@ -63,7 +63,7 @@
 			    			Calculus, to learn and classify different encounters using a Hidden Markov Model based representation.
 			    			<br><br>
 			    			The whole pipeline has been fully implemented into the Robot Operating System (ROS) Indigo and Hydro. 
-			    			The video below shows how it works on a mobile robot. PLACE HOLDER VIDEO.<br><br>
+			    			The video below shows how it works on a mobile robot.<br><br>
 			    			<div class="embed-responsive embed-responsive-16by9">
 								<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zdnvhQU1YNo?rel=0&cc_load_policy=1"></iframe>
 							</div>
