Added new journal paper reference.

--- a/website/index.html
+++ b/website/index.html
@@ -49,6 +49,11 @@
             <div class="row">
 		        <div class="col-md-12">
 		        	<h2>News</h2>
+					  <h3>23/03/15 - Journal has been published.</h3>					  
+					  <p>The recently accepted journal paper about a computational model for Human-Robot Spatial Interaction using QTC, in the special issue on <a href+="http://www.mdpi.com/journal/robotics/special_issues/reasoning-robotics">Representations and Reasoning for Robotics</a>, 
+					  has now been published and is available <a href="http://www.mdpi.com/2218-6581/4/1/63">form the publishers website</a> </p>
+					  <p><a class="btn btn-primary btn-lg" href="research.html" role="button">Go to Research</a></p>
+					  <br><br>
 					  <h3>15/03/15 - Software section added.</h3>					  
 					  <p>I added a section for released and currently developed software. This includes the people tracker, also showing a video of 
 					  of its functionality, and the QTC generation. Please refer to the Software section for more information.</p>
