--- a/website/research.html
+++ b/website/research.html
@@ -39,6 +39,19 @@
 		   </div>
 	   </nav>
 		<div class="container theme-showcase" role="main">
+			<h3><span class="label label-default">2015</span></h3>
+			<div class="panel panel-default">
+			<div class="panel-heading">
+    				<h3 class="panel-title">A Computational Model of Human-Robot Spatial Interactions Based on a Qualitative Trajectory Calculus<div style="text-align: right"><a href="http://www.mdpi.com/2218-6581/4/1/63/pdf">Paper</a></div></h3>
+  				</div>
+  				<div class="panel-body">
+    				 Dondrup, C.; Bellotto, N.; Hanheide, M.; Eder, K.; Leonards, U.	
+    				 <b>A Computational Model of Human-Robot Spatial Interactions Based on a Qualitative Trajectory Calculus.</b> 
+    				 <i>In: Robotics 2015, 4, 63-102.</i>
+    				 <br>
+    				 <div style="text-align: right"><a href="http://www.mdpi.com/2218-6581/4/1/63">Publisher</a> <a href="bibtex/robotics-v04-i01_20150323.bib">BibTex</a></div>
+  				</div>
+  			</div>
 			<h3><span class="label label-default">2014</span></h3>
 			<div class="panel panel-default">
 			<div class="panel-heading">
