--- a/website/index.html
+++ b/website/index.html
@@ -49,7 +49,7 @@
             <div class="row">
 		        <div class="col-md-12">
 		        	<h2>News</h2>
-					  <h3>23/03/15 - Journal has been published.</h3>					  
+					  <h3>23/03/15 - Journal paper has been published.</h3>					  
 					  <p>The recently accepted journal paper about a computational model for Human-Robot Spatial Interaction using QTC, in the special issue on <a href+="http://www.mdpi.com/journal/robotics/special_issues/reasoning-robotics">Representations and Reasoning for Robotics</a>, 
 					  has now been published and is available <a href="http://www.mdpi.com/2218-6581/4/1/63">form the publishers website</a> </p>
 					  <p><a class="btn btn-primary btn-lg" href="research.html" role="button">Go to Research</a></p>
