Added latest paper

--- a/website/research.html
+++ b/website/research.html
@@ -42,6 +42,17 @@
 			<h3><span class="label label-default">2015</span></h3>
 			<div class="panel panel-default">
 			<div class="panel-heading">
+    				<h3 class="panel-title">Real-time multisensor people tracking for human-robot spatial interaction<div style="text-align: right"><a href="http://eprints.lincoln.ac.uk/17545/1/dondrup.pdf">Paper</a></div></h3>
+  				</div>
+  				<div class="panel-body">
+    				 Dondrup, C.; Bellotto, N.; Jovan, F; Hanheide, M.	
+    				 <b>https://staff.fnwi.uva.nl/s.a.whiteson/Shimon_Whiteson/ICRA.html.</b> 
+    				 <i>In: Workshop on Machine Learning for Social Robotics at Internaction Conference on Robotics and Automation (ICRA) 2015</i>
+    				 <br>
+    				 <div style="text-align: right"><a href="https://staff.fnwi.uva.nl/s.a.whiteson/Shimon_Whiteson/ICRA.html">Workshop</a> <a href="bibtex/dondrup2015tracking.bib">BibTex</a></div>
+  				</div>
+			</div>
+			<div class="panel-heading">
     				<h3 class="panel-title">A Computational Model of Human-Robot Spatial Interactions Based on a Qualitative Trajectory Calculus<div style="text-align: right"><a href="http://www.mdpi.com/2218-6581/4/1/63/pdf">Paper</a></div></h3>
   				</div>
   				<div class="panel-body">
