--- a/website/research.html
+++ b/website/research.html
@@ -46,7 +46,7 @@
   				</div>
   				<div class="panel-body">
     				 Dondrup, C.; Bellotto, N.; Jovan, F; Hanheide, M.	
-    				 <b>https://staff.fnwi.uva.nl/s.a.whiteson/Shimon_Whiteson/ICRA.html.</b> 
+    				 <b>Real-time multisensor people tracking for human-robot spatial interaction.</b> 
     				 <i>In: Workshop on Machine Learning for Social Robotics at Internaction Conference on Robotics and Automation (ICRA) 2015</i>
     				 <br>
     				 <div style="text-align: right"><a href="https://staff.fnwi.uva.nl/s.a.whiteson/Shimon_Whiteson/ICRA.html">Workshop</a> <a href="bibtex/dondrup2015tracking.bib">BibTex</a></div>
