--- a/website/software.html
+++ b/website/software.html
@@ -38,6 +38,43 @@
 		   </div>
 	   </nav>
 		<div class="container theme-showcase" role="main">
+		   <div class="panel panel-default">
+  				<div class="panel-heading">
+    				<h3 class="panel-title">Velocity Costmaps</h3>
+  				</div>
+  				<div class="panel-body">
+    				<div class="media">
+			  			<div class="media-left media-top">
+				  			<a href="images/ppl_perception.png" class="thumbnail">
+				    			<img class="media-object" src="images/thumbnails/ppl_perception.png" alt="People Perception">
+							</a>
+			  			</div>
+			  			<div class="media-body">
+			    			In this work, we propose the combination of a state-of-the-art sampling-based local planner with so-called Velocity Costmaps
+			    			to achieve human-aware robot navigation. Instead of introducing humans as ``special obstacles'' into the representation of 
+			    			the environment, we restrict the sample space of a ``Dynamic Window Approach'' local planner to only allow trajectories based 
+			    			on a qualitative description of the supposed interaction. Hence, we are ensuring collision free trajectories by obeying prior 
+			    			knowledge of the unfolding of the encounter. 
+							To achieve this, we use the well-established Qualitative Trajectory Calculus to model the mutual navigation intent of human 
+							and robot, and translate these descriptors into sample space constraints for trajectory generation. 
+			    			<br><br>
+			    			The whole pipeline has been fully implemented into the Robot Operating System (ROS) Indigo and Hydro. 
+			    			The video below shows how it works on a mobile robot.<br><br>
+			    			<div class="embed-responsive embed-responsive-16by9">
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/evWTA8FcYJo" frameborder="0" allowfullscreen></iframe>
+							</div>
+			    			<br><br>
+			    			<b>Source Code</b><br>
+			    			The sources can be found on <a href="http://github.com/cdondrup/strands_hri/tree/new_human_aware">my github webpage</a> and 
+			    			<a href="https://github.com/cdondrup/plugin_local_planner/tree/velocity_costmaps"> here for the modified local planner</a> and are 
+			    			freely available under the MIT and/or BSD license.
+							<br><br>
+							<b>Usage</b><br>
+							Instructions on how to use the system are a little scarce due to various deadlines but will be added to the github page mentioned above. 
+			  			</div>
+					</div>
+  				</div>
+			</div>
 			<div class="panel panel-default">
   				<div class="panel-heading">
     				<h3 class="panel-title">People Perception</h3>
@@ -78,7 +115,7 @@
 			    			freely available under the MIT license.
 							<br><br>
 							<b>Usage</b><br>
-							Instructions on how to use the system can be found on the github page mentioned above. Especial <a href="">the launch package</a> provides 
+							Instructions on how to use the system can be found on the github page mentioned above. Especial <a href="https://github.com/strands-project/strands_perception_people/tree/indigo-devel/perception_people_launch">the launch package</a> provides 
 							instructions on how to start the complete system.
 			  			</div>
 					</div>
