--- a/website/index.html
+++ b/website/index.html
@@ -49,7 +49,11 @@
             <div class="row">
 		        <div class="col-md-12">
 		        	<h2>News</h2>
-		        	          <h3>22/05/15 - Presenting at Machine Learning for Social Robotics workshop at ICRA.</h3>					  
+		        	  <h3>30/09/15 - Introducing Velocity Costmaps for human-aware navigation</h3>					  
+					  <p>Have a look at our proposal for ICRA'16 on Velocity Costmaps for human-aware Navigation using QTC to encode behaviour.</p>
+					  <p><a class="btn btn-primary btn-lg" href="software.html" role="button">Go to Software</a></p>
+					  <br><br>
+		        	  <h3>22/05/15 - Presenting at Machine Learning for Social Robotics workshop at ICRA.</h3>					  
 					  <p>At this year's <a href="http://www.icra2015.org/">ICRA</a> I am going to present a paper about the human tracking pipline used in STRANDS at the Machine Learning for Social Robotics workshop. More information on this full day workshop on 26/05/15 can be found at the <a href="https://staff.fnwi.uva.nl/s.a.whiteson/Shimon_Whiteson/ICRA.html">official workshop webpage</a>.</p>
 					  <p><a class="btn btn-primary btn-lg" href="software.html" role="button">Go to Software</a></p>
 					  <br><br>
