--- a/website/research.html
+++ b/website/research.html
@@ -42,6 +42,26 @@
 			<h3><span class="label label-default">2015</span></h3>
 			<div class="panel panel-default">
 			<div class="panel-heading">
+    				<h3 class="panel-title">Make me a Sandwich! Intrinsic Human Identification from their Course of Action <b>(to appear)</b><div style="text-align: right">Paper</div></h3>
+  				</div>
+  				<div class="panel-body">
+    				 Lightbody, P.; Dondrup, C.; Hanheide, M.	
+    				 <b>Make me a Sandwich! Intrinsic Human Identification from their Course of Action.</b> 
+    				 <i>In: Workshop on Toward a Framework for Joint Action at International Conference on Social Robotics (ICSR) 2015</i>
+    				 <br>
+    				 <div style="text-align: right"><a href="http://fja.sciencesconf.org/">Workshop</a> BibTex</div>
+  				</div>
+  				<div class="panel-heading">
+    				<h3 class="panel-title">Show Me Your Moves! Conveying Navigation Intention of a Mobile Robot to Humans  <b>(to appear)</b><div style="text-align: right">Paper</div></h3>
+  				</div>
+  				<div class="panel-body">
+    				 May, A.; Dondrup, C.; Hanheide, M.	
+    				 <b>Show Me Your Moves! Conveying Navigation Intention of a Mobile Robot to Humans.</b> 
+    				 <i>In: European Conference on Mobile Robots (ECMR) 2015</i>
+    				 <br>
+    				 <div style="text-align: right">BibTex</div>
+  				</div>
+			<div class="panel-heading">
     				<h3 class="panel-title">Real-time multisensor people tracking for human-robot spatial interaction<div style="text-align: right"><a href="http://eprints.lincoln.ac.uk/17545/1/dondrup.pdf">Paper</a></div></h3>
   				</div>
   				<div class="panel-body">
