--- a/website/about.html
+++ b/website/about.html
@@ -49,12 +49,9 @@
 			  			</div>
 			  			<div class="media-body">
 			    			<h4 class="media-heading">Christian Dondrup</h4>
-			    			PhD Student/Hourly Paid Demonstrator in College of Science at the University of Lincoln, UK. <br><br>
+			    			Research Fellow at Heriot-Watt University, Edinburgh, Scotland, UK<br><br>
 			    			<p>
-								Christian Dondrup Received the Diplom degree (equivalent to MSc) in computer science in the natural sciences from Bielefeld University (Germany)
-								 in 2012. His thesis involved developmental robotics and speech recognition,  focusing on human-robot interaction in tutoring scenarios. Currently 
-								 he is a PhD candidate and demonstrator at the School of Computer Science at the University of Lincoln (United Kingdom) and is involved with the 
-								 STRANDS FP7 EU project.			    
+								Christian Dondrup finished his PhD in Computer Science in 2016 at the University of Lincoln, UK as part of the <a href="http://strands.acin.tuwien.ac.at/">STRANDS FP7 EU project</a> concerned with long-term autonomy for mobile robots. His thesis focused on human-aware navigation in ever-changing human populated environments and how qualitative spatial relations can be used to abstract from the metric world in order to achieve robust navigation approaches. Before that, he received the Diplom degree (equivalent to MSc) in computer science in the natural sciences from Bielefeld University (Germany) in 2012. His thesis involved developmental robotics and speech recognition,  focusing on human-robot interaction in tutoring scenarios. Currently, Christian is a Research Fellow at the Heriot-Watt University in Edinburgh, UK and involved in the <a href="http://mummer-project.eu/">MuMMER H2020 EU project</a>.
 			    			</p>
 			  			</div>
 					</div>
