--- a/website/research.html
+++ b/website/research.html
@@ -42,15 +42,35 @@
 		   <h3><span class="label label-default">2016</span></h3>
 			<div class="panel panel-default">
 			<div class="panel-heading">
-    				<h3 class="panel-title">Lessons Learned from the Deployment of a Long-term Autonomous Robot as Companion in Physical Therapy for Older Adults with Dementia <b>(to appear)</b><div style="text-align: right">Paper</div></h3>
+    				<h3 class="panel-title">Human-Robot Spatial Interaction using Probabilistic Qualitative Representations<b> (to appear)</b><div style="text-align: right">Thesis</div></h3>
   				</div>
   				<div class="panel-body">
-    				 Hebesberger, D.; Dondrup, C.; Koertner, T.; Gisinger, C.; Pripfl, J.	
-    				 <b>Lessons Learned from the Deployment of a Long-term Autonomous Robot as Companion in Physical Therapy for Older Adults with Dementia</b> 
-    				 <i>In: International Conference on Human-Robot Interaction (HRI)</i>
+    				 Dondrup, C.	
+    				 <b>Human-Robot Spatial Interaction using Probabilistic Qualitative Representations</b> 
+    				 <i>PhD Thesis, University of Lincoln, UK</i>
     				 <br>
-    				 <div style="text-align: right"><a href="bibtex/hebesberger2016lessons.bib">BibTex</a></div>
+    				 <div style="text-align: right">BibTex</div>
   				</div>
+          <div class="panel-heading">
+            <h3 class="panel-title">Qualitative Constraints for Human-aware Robot Navigation using Velocity Costmaps <div style="text-align: right"><a href="https://doi.org/10.1109/ROMAN.2016.7745177">Paper</a></div></h3>
+          </div>
+          <div class="panel-body">
+             Dondrup, C.; Hanheide, M. 
+             <b>Qualitative Constraints for Human-aware Robot Navigation using Velocity Costmaps</b> 
+             <i>In: 2016 RO-MAN: The 25th IEEE International Symposium on Robot and Human Interactive Communication</i>
+             <br>
+             <div style="text-align: right"><a href="bibtex/dondrup2016quali.bib">BibTex</a></div>
+          </div>
+          <div class="panel-heading">
+            <h3 class="panel-title">Lessons Learned from the Deployment of a Long-term Autonomous Robot as Companion in Physical Therapy for Older Adults with Dementia<div style="text-align: right"><a href="http://strands.acin.tuwien.ac.at/publications/y3/Hebesberger2016hri.pdf">Paper</a></div></h3>
+          </div>
+          <div class="panel-body">
+             Hebesberger, D.; Dondrup, C.; Koertner, T.; Gisinger, C.; Pripfl, J. 
+             <b>Lessons Learned from the Deployment of a Long-term Autonomous Robot as Companion in Physical Therapy for Older Adults with Dementia</b> 
+             <i>In: International Conference on Human-Robot Interaction (HRI)</i>
+             <br>
+             <div style="text-align: right"><a href="bibtex/hebesberger2016lessons.bib">BibTex</a></div>
+          </div>
 			</div>
 			<h3><span class="label label-default">2015</span></h3>
 			<div class="panel panel-default">			
