--- a/website/about.html
+++ b/website/about.html
@@ -25,7 +25,7 @@
 	         	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
 	           		<span class="sr-only">Toggle navigation</span>
 	         	</button>
-	         	Christian Dondrup
+	         	<a class="navbar-brand" href="http://www.dondrup.net">Christian Dondrup</a>
 	       	</div>
 	       	<div id="navbar" class="navbar-collapse collapse">
 	         	<ul class="nav navbar-nav">
