--- a/website/index.html
+++ b/website/index.html
@@ -34,7 +34,7 @@
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="research.html">Research</a></li>
+				<li><a href="https://scholar.google.co.uk/citations?user=udVxavAAAAAJ&hl=en">Research</a></li>
 				<li><a href="software.html">Software</a></li>
           </ul>
         </div><!--/.nav-collapse -->
